--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Rescate Animal</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <my-app>Loading...</my-app>
 </body>
 </html>
